<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2014 Carl-Philipp Harmant
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_selector"
    tools:context=".MainActivity$PlaceholderFragment" >

  <RelativeLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/no_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="35dp"
            android:text="@string/no_fav"
            android:textIsSelectable="false"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_fav2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_fav"
            android:layout_centerHorizontal="true"
            android:text="@string/add_fav"
            android:textIsSelectable="false"
            android:paddingTop="15dp"
            android:textSize="18sp"
            android:textStyle="bold" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_fav2"
            android:layout_centerHorizontal="true"
            android:text="@string/add_fav2"
            android:textIsSelectable="false"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@+id/favorites_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="1dp"
        android:listSelector="@android:color/transparent" >
    </ListView>

</RelativeLayout>