<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2016 Carl-Philipp Harmant
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="true">

    <!--Main content-->
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include layout="@layout/app_bar"/>

        <TextView
                android:id="@+id/no_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="35dp"
                android:text="@string/no_fav"
                android:textIsSelectable="false"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/no_fav2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_fav"
                android:textIsSelectable="false"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_fav2"
                android:textIsSelectable="false"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold" />

        <ListView
                android:id="@+id/favorites_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="1dp"
                android:listSelector="@android:color/transparent" >
        </ListView>
    </LinearLayout>

    <!--Navigation Drawer-->
    <android.support.design.widget.NavigationView
            android:id="@+id/main_drawer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"

            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/menu_drawer"/>
</android.support.v4.widget.DrawerLayout>